tests/type-errors/cmp_dur_int.arl
archetype cmp_dur_int

variable b : bool = false

entry exec () {
  var d : duration = 0s;
  b := d = 0i
}
